updated about page and various css

--- a/src/about.html
+++ b/src/about.html
@@ -11,15 +11,22 @@
     <header id="top">
       <img src="images/logo.png" alt="argine logo" class="logo" />
       <nav>
-        <div class="nav"><a href="/index.html" class="menu">Home</a></div>
-        <div class="nav"><a href="/about.html" class="menu">About Me</a></div>
-        <div class="nav"><a href="/blog.html" class="menu">Blog</a></div>
-        <div class="nav"><a href="/contact.html" class="menu">Contact</a></div>
+        <div><a href="/index.html" class="menu">Home</a></div>
+        <div><a href="/about.html" class="menu">About Me</a></div>
+        <div><a href="/blog.html" class="menu">Blog</a></div>
+        <div><a href="/contact.html" class="menu">Contact</a></div>
       </nav>
     </header>
     <header class="smlhdr"><h1>Meet Argine</h1></header>
     <main>
-        <div class="widecontent"></div>
+        <div class="widebox">
+            <h2>Argine Harutyunyan</h2>
+            <h3>(Future) Web Developer</h3>
+        </div>
+        <div class="widebox">
+          <span>  ɑːˈɡɪni </span>
+            <q>It's pronounced like a guinea pig, without the pig</q>
+        </div>
       <nav>
         <span class="button"> <a href="#exp"> Experience & Education</a></span>
         <span class="button"><a href="#personal">Personal</a></span>
