--- a/src/contact.html
+++ b/src/contact.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="images/logo.png" alt="argine logo" class="logo" />
+        <img src="images/logo.png" alt="argine logo" class="logo">
         <nav>
           <div class="nav"><a href="/index.html" class="menu">Home</a></div>
           <div class="nav"><a href="/about.html" class="menu">About Me</a></div>
