--- a/src/about.html
+++ b/src/about.html
@@ -11,10 +11,10 @@
     <header id="top">
       <img src="images/logo.png" alt="argine logo" class="logo" />
       <nav>
-        <div><a href="/index.html" class="menu">Home</a></div>
-        <div><a href="/about.html" class="menu">About Me</a></div>
-        <div><a href="/blog.html" class="menu">Blog</a></div>
-        <div><a href="/contact.html" class="menu">Contact</a></div>
+        <div class="nav"><a href="/index.html" class="menu">Home</a></div>
+        <div class="nav"><a href="/about.html" class="menu">About Me</a></div>
+        <div class="nav"><a href="/blog.html" class="menu">Blog</a></div>
+        <div class="nav"><a href="/contact.html" class="menu">Contact</a></div>
       </nav>
     </header>
     <header class="smlhdr"><h1>Meet Argine</h1></header>
