updated readme, small code changes in email

--- a/src/blog.html
+++ b/src/blog.html
@@ -70,7 +70,7 @@
           rel="noopener noreferrer"
           ><img src="images/github-mark.png" alt="github logo" class="logo"
         /></a>
-        <a href="mailto:aharuty@live.com"
+        <a href="mailto:13937@coderacademy.edu.au"
           ><img src="images/email-logo.png" alt="email logo" class="logosqr"
         /></a>
       </div>
