--- a/src/contact.html
+++ b/src/contact.html
@@ -25,6 +25,7 @@
        <div class="content">
         <p>See more of my work on GitHub or reach out via emails if you have any questions and I will respond as soon as possible.</p>
        </div>
+        <!-- COMPONENT 4 - GRAPHIC, logo + external link -->
        <div class="content"><article>
         <a href="https://github.com/arharutyu" target="_blank" rel="noopener noreferrer"><img src="images/github-mark.png" alt="github logo" class="logo"></a>
         <h3>GitHub</h3>
@@ -40,7 +41,7 @@
             <!-- External social links -->
             <div>
               <a href="https://github.com/arharutyu" target="_blank" rel="noopener noreferrer"><img src="images/github-mark.png" alt="github logo" class="logo"></a>
-              <a href="mailto:aharuty@live.com"><img src="images/email-logo.png" alt="email logo" class="logosqr"></a>
+              <a href="mailto:13937@coderacademy.edu.au"><img src="images/email-logo.png" alt="email logo" class="logosqr"></a>
             </div>
           </footer>
 </body>
