--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Argine</title>
+
+    <!-- COMPONENT 1 - GRAPHIC, favicon -->
+    <link rel="icon" type="image/x-icon" href="images/logo.png" />
   </head>
   <body>
     <!-- Navigation bar -->
     <header>
+      <!-- COMPONENT 2 - GRAPHIC, logo -->
       <img src="images/logo.png" alt="argine logo" class="logo" />
       <nav>
         <div class="nav"><a href="/index.html" class="menu">Home</a></div>
@@ -22,10 +27,14 @@
     <!--Hero-->
     <header id="hero">
       <h1>Hello! I'm Argine.</h1>
-    
     </header>
     <main>
-    <div class="widecontent">I'm a (future) web developer from Melbourne, Australia. Welcome to my portfolio.</div>
+         <!-- COMPONENT 1 - TEXT -->
+      <div class="widecontent">
+        I'm a (future) web developer from Melbourne, Australia. Welcome to my
+        portfolio.
+      </div>
+      <!-- COMPONENT 2 - TEXT, styled text box -->
       <article id="box1">
         <h2>How do I say that?</h2>
         Learn more about Argine including work experience, personal interests,
@@ -49,8 +58,15 @@
       <p>Created by Argine Harutyunyan</p>
       <!-- External social links -->
       <div>
-        <a href="https://github.com/arharutyu" target="_blank" rel="noopener noreferrer"><img src="images/github-mark.png" alt="github logo" class="logo"></a>
-        <a href="mailto:aharuty@live.com"><img src="images/email-logo.png" alt="email logo" class="logosqr"></a>
+        <a
+          href="https://github.com/arharutyu"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img src="images/github-mark.png" alt="github logo" class="logo"
+        /></a>
+        <a href="mailto:13937@coderacademy.edu.au"
+          ><img src="images/email-logo.png" alt="email logo" class="logosqr"
+        /></a>
       </div>
     </footer>
   </body>
